--- a/src/main/resources/sample.fxml
+++ b/src/main/resources/sample.fxml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.layout.VBox?>
 
-<VBox xmlns:fx="http://javafx.com/fxml" fx:controller="mainpackage.Controller" alignment="CENTER">
-    <Label text="Hello World"/>
-    <Button text="Say Hello" onAction="#sayHello"/>
+<VBox alignment="CENTER" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/18" fx:controller="mainpackage.Controller">
+    <Label prefHeight="50.0" prefWidth="191.0" text="Hello World" />
+    <Button onAction="#sayHello" text="Say Hello" />
 </VBox>
