--- a/src/main/resources/sample.fxml
+++ b/src/main/resources/sample.fxml
@@ -1,22 +1,39 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.layout.VBox?>
+<?import java.net.*?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-<?import javafx.scene.layout.GridPane?>
-<VBox alignment="CENTER" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/18" fx:controller="mainpackage.Controller">
-    <Label fx:id="label1" prefHeight="50.0" prefWidth="191.0" text="Hello World" />
-    <Button onAction="#sayHello" text="Say Hello" />
-    <GridPane>
-        <children>
-            
-        </children>
-    </GridPane>
-</VBox>
+<GridPane fx:controller="mainpackage.Controller"
+          xmlns:fx="http://javafx.com/fxml" alignment="center" hgap="50" vgap="50">
+    <padding><Insets top="25" right="25" bottom="10" left="25"/></padding>
+    <gridLinesVisible>true</gridLinesVisible>
+    <Text text="Sudoku"
+          GridPane.columnIndex="1" GridPane.rowIndex="0"
+          GridPane.columnSpan="2">
+        <font>
+            <Font size="20.0"/>
+        </font>
+    </Text>
+
+    <Label text="User Name:"
+           GridPane.columnIndex="0" GridPane.rowIndex="1">
+    </Label>
+
+    <TextField
+            GridPane.columnIndex="1" GridPane.rowIndex="1"/>
+    <HBox spacing="10" alignment="center"
+          GridPane.columnIndex="1" GridPane.rowIndex="2">
+        <Button fx:id="button" text="Play" onAction="#buttonPressed"/>
+    </HBox>
+
+    <Text fx:id="actiontarget"
+          GridPane.columnIndex="1" GridPane.rowIndex="2"/>
 
 
-
+</GridPane>
 
 
 
