--- a/src/main/resources/sample.fxml
+++ b/src/main/resources/sample.fxml
@@ -1,22 +1,45 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.layout.VBox?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-<?import javafx.scene.layout.GridPane?>
-<VBox alignment="CENTER" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/18" fx:controller="mainpackage.Controller">
-    <Label fx:id="label1" prefHeight="50.0" prefWidth="191.0" text="Hello World" />
-    <Button onAction="#sayHello" text="Say Hello" />
-    <GridPane>
-        <children>
-            
-        </children>
-    </GridPane>
-</VBox>
+<GridPane alignment="center" hgap="30" prefHeight="251.0" prefWidth="319.0" vgap="20" xmlns="http://javafx.com/javafx/11.0.2" xmlns:fx="http://javafx.com/fxml/1" fx:controller="mainpackage.Controller">
+    <padding><Insets bottom="10" left="15" right="25" top="25" /></padding>
+    <gridLinesVisible>false</gridLinesVisible>
+    <Text text="Sudoku" GridPane.columnIndex="1" GridPane.columnSpan="2" GridPane.rowIndex="0">
+      <font>
+         <Font name="Calibri Light" size="36.0" />
+      </font></Text>
 
 
+    <HBox alignment="center" spacing="10" GridPane.columnIndex="2" GridPane.rowIndex="2">
+        <Button fx:id="Play" onAction="#playPressed" text="Play" />
+    </HBox>
 
+    <HBox alignment="center" spacing="10" GridPane.columnIndex="1" GridPane.rowIndex="3">
+        <Button onAction="#buttonPressed" text="Level1" />
+    </HBox>
+    <HBox alignment="center" spacing="10" GridPane.columnIndex="2" GridPane.rowIndex="3">
+        <Button onAction="#buttonPressed" text="Level2" />
+    </HBox>
+    <HBox alignment="center" spacing="10" GridPane.columnIndex="3" GridPane.rowIndex="3">
+        <Button onAction="#buttonPressed" text="Level3" />
+    </HBox>
 
+    <Text fx:id="actiontarget" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+   <columnConstraints>
+      <ColumnConstraints />
+      <ColumnConstraints />
+      <ColumnConstraints />
+      <ColumnConstraints />
+   </columnConstraints>
+   <rowConstraints>
+      <RowConstraints />
+      <RowConstraints />
+      <RowConstraints />
+      <RowConstraints />
+   </rowConstraints>
 
-
+</GridPane>
