--- a/src/main/resources/game1.fxml
+++ b/src/main/resources/game1.fxml
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-
 <?import javafx.geometry.Insets?>
-<?import javafx.scene.text.Text?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
-<GridPane alignment="center" hgap="30" prefHeight="251.0" prefWidth="319.0" vgap="20" xmlns="http://javafx.com/javafx" xmlns:fx="http://javafx.com/fxml" fx:controller="mainpackage.game1Controller">
+<?import javafx.scene.text.Text?>
+
+<GridPane alignment="center" hgap="30" prefHeight="600.0" prefWidth="600.0" vgap="20" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="mainpackage.game1Controller">
 <padding><Insets bottom="10" left="15" right="25" top="25" /></padding>
 <gridLinesVisible>false</gridLinesVisible>
 <Text text="Sudoku" GridPane.columnIndex="1" GridPane.columnSpan="2" GridPane.rowIndex="0">
@@ -17,9 +17,8 @@
         <Font name="Calibri Light" size="36.0" />
     </font></Text>
 
-
 <HBox alignment="center" spacing="10" GridPane.columnIndex="2" GridPane.rowIndex="2">
-    <Button fx:id="Win" onAction="#playPressed" text="Win" />
+    <Button fx:id="Win" onAction="#playPressed" text="Feld" />
 </HBox>
 
 
@@ -38,4 +37,3 @@
 </rowConstraints>
 
 </GridPane>
-
