--- a/src/main/resources/youWon.fxml
+++ b/src/main/resources/youWon.fxml
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-        <?import java.lang.*?>
-        <?import java.util.*?>
-        <?import javafx.scene.*?>
-        <?import javafx.scene.control.*?>
-        <?import javafx.scene.layout.*?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-        <?import javafx.geometry.Insets?>
-        <?import javafx.scene.text.Text?>
-        <?import javafx.scene.text.Font?>
-<GridPane alignment="center" hgap="30" prefHeight="251.0" prefWidth="319.0" vgap="20" xmlns="http://javafx.com/javafx" xmlns:fx="http://javafx.com/fxml" fx:controller="mainpackage.youWonController">
+<GridPane alignment="center" hgap="30" prefHeight="600.0" prefWidth="600.0" vgap="20" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="mainpackage.youWonController">
 <padding><Insets bottom="10" left="15" right="25" top="25" /></padding>
 <gridLinesVisible>false</gridLinesVisible>
 <Text text="Sudoku" GridPane.columnIndex="1" GridPane.columnSpan="2" GridPane.rowIndex="0">
