--- a/src/main/resources/home.fxml
+++ b/src/main/resources/home.fxml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.String?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.HBox?>
@@ -9,34 +11,48 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<?import java.lang.String?>
-<GridPane alignment="center" hgap="30" prefHeight="600.0" prefWidth="600.0" vgap="20" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="mainpackage.game1Controller">
+<GridPane alignment="center" hgap="30" prefHeight="400.0" prefWidth="600.0" vgap="20" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="mainpackage.gameController">
+
     <padding><Insets bottom="10" left="15" right="25" top="25" /></padding>
     <gridLinesVisible>false</gridLinesVisible>
+
     <stylesheets> <String fx:value="styles.css" /> </stylesheets>
-    <Text text="Sudoku" GridPane.columnIndex="1" GridPane.columnSpan="2" GridPane.rowIndex="0">
-      <font>
-         <Font name="Calibri Light" size="36.0" />
-      </font></Text>
 
-    <HBox alignment="center" spacing="10" GridPane.columnIndex="1" GridPane.rowIndex="3">
-        <Button onAction="#level1pressed" text="Level1" />
+
+    <HBox alignment="center" spacing="10" GridPane.columnIndex="1" GridPane.rowIndex="5">
+        <Button onAction="#level1pressed" prefHeight="33.0" prefWidth="61.0" text="Level1" />
     </HBox>
-    <HBox alignment="center" spacing="10" GridPane.columnIndex="2" GridPane.rowIndex="3">
-        <Button onAction="#level2pressed" text="Level2" />
+    <HBox alignment="center" spacing="10" GridPane.columnIndex="2" GridPane.rowIndex="5">
+        <Button onAction="#level2pressed" prefHeight="32.0" prefWidth="62.0" text="Level2" />
     </HBox>
-    <HBox alignment="center" spacing="10" GridPane.columnIndex="3" GridPane.rowIndex="3">
-        <Button onAction="#level3pressed" text="Level3" />
+    <HBox alignment="center" spacing="10" GridPane.columnIndex="3" GridPane.rowIndex="5">
+        <Button onAction="#level3pressed" prefHeight="33.0" prefWidth="64.0" text="Level3" />
     </HBox>
 
-    <Text fx:id="actiontarget" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+    <Text fx:id="actiontarget" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+   <AnchorPane prefHeight="95.0" prefWidth="200.0" GridPane.columnIndex="2" GridPane.rowIndex="1">
+      <children>
+          <Text fill="#2a2169" layoutX="39.0" layoutY="22.0" text="SUDOKU" textAlignment="CENTER" wrappingWidth="121.63091242313385">
+            <font>
+               <Font size="24.0" />
+            </font>
+         </Text>
+         <Text fill="#2a2169" layoutX="39.0" layoutY="60.0" text="Hey User Name!" textAlignment="CENTER" wrappingWidth="121.63091242313385" />
+      </children></AnchorPane>
+    <Text fill="#2a2169" text="Choose level" textAlignment="CENTER" wrappingWidth="121.63091242313385" GridPane.columnIndex="2" GridPane.columnSpan="2" GridPane.rowIndex="4">
+      <GridPane.margin>
+         <Insets left="40.0" right="20.0" />
+      </GridPane.margin></Text>
    <columnConstraints>
+
       <ColumnConstraints />
       <ColumnConstraints />
       <ColumnConstraints />
       <ColumnConstraints />
    </columnConstraints>
    <rowConstraints>
+      <RowConstraints />
+      <RowConstraints />
       <RowConstraints />
       <RowConstraints />
       <RowConstraints />
