--- a/src/main/resources/settings.fxml
+++ b/src/main/resources/settings.fxml
@@ -1,19 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.String?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
-
-<?import java.lang.String?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
-<GridPane alignment="center" hgap="10.0" prefHeight="600.0" prefWidth="600.0" vgap="10.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="mainpackage.Controller">
+
+<GridPane alignment="center" hgap="10.0" prefHeight="400.0" prefWidth="600.0" vgap="10.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="mainpackage.Controller">
 <padding><Insets bottom="10" left="15" right="25" top="25" /></padding>
     <gridLinesVisible>false</gridLinesVisible>
     <stylesheets> <String fx:value="styles.css" /> </stylesheets>
-    <Text text="Settings" GridPane.columnIndex="1" GridPane.columnSpan="2" GridPane.rowIndex="0">
+    <Text text="Settings" wrappingWidth="102.6578369140625" GridPane.columnIndex="1" GridPane.columnSpan="2" GridPane.rowIndex="0">
         <font>
             <Font name="Calibri Light" size="30.0" />
         </font></Text>
