--- a/src/main/resources/game1.fxml
+++ b/src/main/resources/game1.fxml
@@ -100,7 +100,7 @@
                             <GridPane.margin>
                                 <Insets />
                             </GridPane.margin></Button>
-                        <Button id="Back" cancelButton="true" mnemonicParsing="false" prefHeight="25.0" prefWidth="49.0" text="Back" GridPane.columnIndex="1" GridPane.rowIndex="2">
+                        <Button id="Back" onAction="#backPressed" mnemonicParsing="false" prefHeight="25.0" prefWidth="49.0" text="Back" GridPane.columnIndex="1" GridPane.rowIndex="2">
                             <GridPane.margin>
                                 <Insets left="65.0" />
                             </GridPane.margin>
