--- a/src/main/resources/game1.fxml
+++ b/src/main/resources/game1.fxml
@@ -105,7 +105,7 @@
                                 <Insets left="65.0" />
                             </GridPane.margin>
                         </Button>
-                  <Label prefHeight="41.0" prefWidth="141.0" text="Wrong input counter: 0/3" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                        <Label disable="true" fx:id="counter" prefHeight="41.0" prefWidth="141.0" text="Wrong input counter: 0/3" GridPane.columnIndex="1" GridPane.rowIndex="1" />
                     </children>
                 </GridPane>
             <Button mnemonicParsing="false" onMouseClicked="#OnStartGameClicked" text="StartGame" GridPane.columnIndex="1" GridPane.rowIndex="2" />
