--- a/src/main/resources/home.fxml
+++ b/src/main/resources/home.fxml
@@ -37,12 +37,16 @@
                <Font size="24.0" />
             </font>
          </Text>
-         <Text fill="#2a2169" layoutX="39.0" layoutY="60.0" text="Hey User Name!" textAlignment="CENTER" wrappingWidth="121.63091242313385" />
       </children></AnchorPane>
     <Text fill="#2a2169" text="Choose level" textAlignment="CENTER" wrappingWidth="121.63091242313385" GridPane.columnIndex="2" GridPane.columnSpan="2" GridPane.rowIndex="4">
       <GridPane.margin>
          <Insets left="40.0" right="20.0" />
       </GridPane.margin></Text>
+   <Button id="goBackHome" alignment="CENTER" mnemonicParsing="false" onAction="#goBackHome" text="Back to home" textAlignment="CENTER" GridPane.columnIndex="2" GridPane.rowIndex="6">
+      <GridPane.margin>
+         <Insets left="55.0" right="40.0" />
+      </GridPane.margin>
+   </Button>
    <columnConstraints>
 
       <ColumnConstraints />
@@ -51,6 +55,7 @@
       <ColumnConstraints />
    </columnConstraints>
    <rowConstraints>
+      <RowConstraints />
       <RowConstraints />
       <RowConstraints />
       <RowConstraints />
