--- a/src/main/resources/startgame.fxml
+++ b/src/main/resources/startgame.fxml
@@ -14,7 +14,7 @@
     <padding><Insets bottom="10" left="15" right="25" top="25" /></padding>
     <gridLinesVisible>false</gridLinesVisible>
     <stylesheets> <String fx:value="styles.css" /> </stylesheets>
-    <Text fill="#2a2169" text="SUDOKU" textAlignment="CENTER" wrappingWidth="121.63091242313385" GridPane.columnIndex="2" GridPane.columnSpan="2" GridPane.rowIndex="1">
+    <Text fill="#2a2169" text="SUDOKU" textAlignment="CENTER" wrappingWidth="121.63091242313385" GridPane.columnIndex="3" GridPane.columnSpan="2" GridPane.rowIndex="2">
       <font>
          <Font name="Calibri Light" size="18.0" />
       </font>
@@ -23,19 +23,26 @@
       </GridPane.margin></Text>
 
 
-    <HBox alignment="center" spacing="10" GridPane.columnIndex="2" GridPane.rowIndex="8" />
+    <HBox alignment="center" spacing="10" GridPane.columnIndex="3" GridPane.rowIndex="9">
+      <children>
+         <Button mnemonicParsing="false" onAction="#settingsPressed" prefHeight="25.0" prefWidth="71.0" text="Settings" textAlignment="JUSTIFY">
+            <HBox.margin>
+               <Insets />
+            </HBox.margin>
+         </Button>
+      </children></HBox>
 
 
-    <Text fx:id="actiontarget" GridPane.columnIndex="1" GridPane.rowIndex="8" />
-   <Button mnemonicParsing="false" onAction="#settingsPressed" prefHeight="25.0" prefWidth="60.0" text="Settings" textAlignment="JUSTIFY" GridPane.columnIndex="2" GridPane.rowIndex="11">
-      <GridPane.margin>
-         <Insets left="50.0" />
-      </GridPane.margin>
-   </Button>
-     <Button fx:id="Play" onAction="#playPressed" prefHeight="103.0" prefWidth="159.0" text="Play" GridPane.columnIndex="2" GridPane.rowIndex="6">
+    <Text fx:id="actiontarget" GridPane.columnIndex="2" GridPane.rowIndex="9" />
+     <Button fx:id="Play" onAction="#playPressed" prefHeight="103.0" prefWidth="159.0" text="Play" GridPane.columnIndex="3" GridPane.rowIndex="7">
       <font>
          <Font size="35.0" />
       </font>
+   </Button>
+   <Button fx:id="exit" mnemonicParsing="false" onAction="#exitGame" prefHeight="25.0" prefWidth="71.0" text="Exit game" GridPane.columnIndex="3" GridPane.rowIndex="12">
+      <GridPane.margin>
+         <Insets left="44.0" />
+      </GridPane.margin>
    </Button>
    
    <columnConstraints>
@@ -43,8 +50,10 @@
       <ColumnConstraints />
       <ColumnConstraints />
       <ColumnConstraints />
+      <ColumnConstraints />
    </columnConstraints>
    <rowConstraints>
+      <RowConstraints />
       <RowConstraints />
       <RowConstraints />
       <RowConstraints />
