--- a/src/main/resources/game3.fxml
+++ b/src/main/resources/game3.fxml
@@ -102,7 +102,7 @@
                         <Insets left="8.0" />
                      </GridPane.margin>
                   </Button>
-                  <Button mnemonicParsing="false" onMouseClicked="#OnStartGameClicked" prefHeight="39.0" prefWidth="116.0" text="StartGame" GridPane.columnIndex="1" GridPane.rowIndex="1">
+                  <Button mnemonicParsing="false" onMouseClicked="#resetGame" prefHeight="39.0" prefWidth="116.0" text="StartGame" GridPane.columnIndex="1" GridPane.rowIndex="1">
                      <font>
                         <Font size="19.0" />
                      </font>
