--- a/src/main/resources/home.fxml
+++ b/src/main/resources/home.fxml
@@ -11,7 +11,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<GridPane alignment="center" hgap="30" prefHeight="400.0" prefWidth="600.0" vgap="20" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="mainpackage.homeController">
+<GridPane alignment="center" hgap="30" prefHeight="400.0" prefWidth="600.0" vgap="20" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="mainpackage.homeController">
 
     <padding><Insets bottom="10" left="15" right="25" top="25" /></padding>
     <gridLinesVisible>false</gridLinesVisible>
@@ -19,15 +19,9 @@
     <stylesheets> <String fx:value="styles.css" /> </stylesheets>
 
 
-    <HBox alignment="center" spacing="10" GridPane.columnIndex="1" GridPane.rowIndex="5">
-        <Button onAction="#level1pressed" prefHeight="33.0" prefWidth="61.0" text="Level1" />
-    </HBox>
-    <HBox alignment="center" spacing="10" GridPane.columnIndex="2" GridPane.rowIndex="5">
-        <Button onAction="#level2pressed" prefHeight="32.0" prefWidth="62.0" text="Level2" />
-    </HBox>
-    <HBox alignment="center" spacing="10" GridPane.columnIndex="3" GridPane.rowIndex="5">
-        <Button onAction="#level3pressed" prefHeight="33.0" prefWidth="64.0" text="Level3" />
-    </HBox>
+    <HBox alignment="center" spacing="10" GridPane.columnIndex="1" GridPane.rowIndex="6" />
+    <HBox alignment="center" spacing="10" GridPane.columnIndex="2" GridPane.rowIndex="6" />
+    <HBox alignment="center" spacing="10" GridPane.columnIndex="3" GridPane.rowIndex="6" />
 
     <Text fx:id="actiontarget" GridPane.columnIndex="1" GridPane.rowIndex="4" />
    <AnchorPane prefHeight="95.0" prefWidth="200.0" GridPane.columnIndex="2" GridPane.rowIndex="1">
@@ -42,11 +36,14 @@
       <GridPane.margin>
          <Insets left="40.0" right="20.0" />
       </GridPane.margin></Text>
-   <Button id="goBackHome" alignment="CENTER" mnemonicParsing="false" onAction="#goBackHome" text="Back to home" textAlignment="CENTER" GridPane.columnIndex="2" GridPane.rowIndex="6">
+   <Button id="goBackHome" alignment="CENTER" mnemonicParsing="false" onAction="#goBackHome" text="Back to home" textAlignment="CENTER" GridPane.columnIndex="2" GridPane.rowIndex="7">
       <GridPane.margin>
          <Insets left="55.0" right="40.0" />
       </GridPane.margin>
    </Button>
+     <Button onAction="#level1pressed" prefHeight="33.0" prefWidth="61.0" text="Level1" GridPane.columnIndex="1" GridPane.rowIndex="5" />
+     <Button onAction="#level2pressed" prefHeight="32.0" prefWidth="62.0" text="Level2" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.rowIndex="5" />
+     <Button onAction="#level3pressed" prefHeight="33.0" prefWidth="64.0" text="Level3" GridPane.columnIndex="3" GridPane.rowIndex="5" />
    <columnConstraints>
 
       <ColumnConstraints />
@@ -55,6 +52,7 @@
       <ColumnConstraints />
    </columnConstraints>
    <rowConstraints>
+      <RowConstraints />
       <RowConstraints />
       <RowConstraints />
       <RowConstraints />
