Adjusted parameters and clean code

--- a/src/main/resources/home.fxml
+++ b/src/main/resources/home.fxml
@@ -60,6 +60,7 @@
       <RowConstraints />
       <RowConstraints />
       <RowConstraints />
+      <RowConstraints />
    </rowConstraints>
 
 </GridPane>
