--- a/src/main/resources/level.fxml
+++ b/src/main/resources/level.fxml
@@ -98,12 +98,12 @@
                   <RowConstraints maxHeight="39.33332824707031" minHeight="10.0" prefHeight="13.333343505859375" vgrow="SOMETIMES" />
                     </rowConstraints>
                     <children>
-                        <Button id="goback" mnemonicParsing="false" onAction="#goBackPressed" prefHeight="25.0" prefWidth="99.0" text="Back to menue" GridPane.columnIndex="1">
+                        <Button id="goback" mnemonicParsing="false" onAction="#lblBackToMenu" prefHeight="25.0" prefWidth="99.0" text="Back to menu" GridPane.columnIndex="1">
                             <GridPane.margin>
                                 <Insets />
                             </GridPane.margin>
                   </Button>
-                  <Button mnemonicParsing="false" onMouseClicked="#resetGame" prefHeight="25.0" prefWidth="99.0" text="Reset game" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                  <Button mnemonicParsing="false" onMouseClicked="#lblResetGame" prefHeight="25.0" prefWidth="99.0" text="Reset game" GridPane.columnIndex="1" GridPane.rowIndex="1" />
                     </children>
                 </GridPane>
             <GridPane GridPane.columnIndex="1" GridPane.rowIndex="2">
@@ -117,8 +117,8 @@
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
               </rowConstraints>
                <children>
-                        <Label fx:id="counter" disable="true" prefHeight="41.0" prefWidth="141.0" text="Wrong input counter: 0/3" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-                   <Label fx:id="timer" disable="true" prefHeight="41.0" prefWidth="141.0" text="Timer: s" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                        <Label fx:id="lblCounter" disable="true" prefHeight="41.0" prefWidth="141.0" text="Wrong input counter: 0/3" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                   <Label fx:id="lblTimer" disable="true" prefHeight="41.0" prefWidth="141.0" text="Timer: s" GridPane.columnIndex="1" GridPane.rowIndex="2" />
                   <GridPane GridPane.columnIndex="1">
                     <columnConstraints>
                       <ColumnConstraints hgrow="SOMETIMES" maxWidth="84.33331298828125" minWidth="10.0" prefWidth="50.000020345052086" />
