--- a/src/main/resources/home.fxml
+++ b/src/main/resources/home.fxml
@@ -42,17 +42,17 @@
             <Insets left="40.0" right="20.0"/>
         </GridPane.margin>
     </Text>
-    <Button id="goBackHome" alignment="CENTER" mnemonicParsing="false" onAction="#goBackHome" text="Back to home"
+    <Button id="goBackHome" alignment="CENTER" mnemonicParsing="false" onAction="#btnGoBackHome" text="Back to home"
             textAlignment="CENTER" GridPane.columnIndex="2" GridPane.rowIndex="7">
         <GridPane.margin>
             <Insets left="55.0" right="40.0"/>
         </GridPane.margin>
     </Button>
-    <Button id="1" onAction="#levelPressed" prefHeight="33.0" prefWidth="61.0" text="Level1" GridPane.columnIndex="1"
+    <Button id="1" onAction="#btnLevelPressed" prefHeight="33.0" prefWidth="61.0" text="Level1" GridPane.columnIndex="1"
             GridPane.rowIndex="5"/>
-    <Button id="2" onAction="#levelPressed" prefHeight="32.0" prefWidth="62.0" text="Level2" GridPane.columnIndex="2"
+    <Button id="2" onAction="#btnLevelPressed" prefHeight="32.0" prefWidth="62.0" text="Level2" GridPane.columnIndex="2"
             GridPane.halignment="CENTER" GridPane.rowIndex="5"/>
-    <Button id="3" onAction="#levelPressed" prefHeight="33.0" prefWidth="64.0" text="Level3" GridPane.columnIndex="3"
+    <Button id="3" onAction="#btnLevelPressed" prefHeight="33.0" prefWidth="64.0" text="Level3" GridPane.columnIndex="3"
             GridPane.rowIndex="5"/>
     <columnConstraints>
 
