--- a/src/main/resources/startgame.fxml
+++ b/src/main/resources/startgame.fxml
@@ -31,7 +31,7 @@
 
 
     <Text fx:id="actiontarget" GridPane.columnIndex="2" GridPane.rowIndex="9"/>
-    <Button fx:id="Play" layoutX="220.0" layoutY="159.0" onAction="#playPressed" prefHeight="82.0" prefWidth="159.0"
+    <Button fx:id="Play" layoutX="220.0" layoutY="159.0" onAction="#btnPlayPressed" prefHeight="82.0" prefWidth="159.0"
             text="Play" GridPane.columnIndex="3" GridPane.rowIndex="6">
         <font>
             <Font size="35.0"/>
@@ -43,6 +43,6 @@
             <Insets left="44.0"/>
         </GridPane.margin>
     </Button>
-    <Button layoutX="302.0" layoutY="282.0" onAction="#resetGame" mnemonicParsing="false" text="Reset score"/>
+    <Button layoutX="302.0" layoutY="282.0" onAction="#btnResetGame" mnemonicParsing="false" text="Reset score"/>
 
 </AnchorPane>
